--- a/index.html
+++ b/index.html
@@ -3,47 +3,115 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Magical Romantic Animation</title>
+  <title>Romantic Animated Couple</title>
   <style>
     /* General Styling */
     body {
       margin: 0;
+      padding: 0;
       background: linear-gradient(145deg, #6d5dfc, #ff8ae2);
       overflow: hidden;
       font-family: 'Arial', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
+
     .scene {
       position: relative;
       width: 100%;
-      height: 100vh;
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
       overflow: hidden;
     }
+
+    /* Couple Design */
     .couple {
       position: relative;
-      width: 300px;
+      width: 200px;
       height: 300px;
-      animation: float 4s ease-in-out infinite;
-    }
-    .girl, .boy {
-      position: absolute;
-      width: 150px;
-      height: 300px;
-      background-size: cover;
-      background-position: center;
-    }
-    .girl {
-      left: 0;
-      background-image: url('https://via.placeholder.com/150x300/FFB6C1/000?text=Girl');
-    }
-    .boy {
-      right: 0;
-      background-image: url('https://via.placeholder.com/150x300/87CEEB/000?text=Boy');
     }
 
-    /* Animation Effects */
+    .girl, .boy {
+      position: absolute;
+      bottom: 0;
+      width: 90px;
+      height: 220px;
+      border-radius: 50px;
+      background: #ffb6c1;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      transform: scale(1);
+      transition: transform 0.5s;
+    }
+
+    .girl {
+      left: 0;
+      background: linear-gradient(to bottom, #ffb6c1, #ff6f91);
+    }
+
+    .boy {
+      right: 0;
+      background: linear-gradient(to bottom, #87ceeb, #1e90ff);
+    }
+
+    /* Heads */
+    .head {
+      position: relative;
+      width: 60px;
+      height: 60px;
+      background: #ffddcc;
+      border-radius: 50%;
+      top: -20px;
+    }
+
+    .girl .head {
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    .boy .head {
+      right: 50%;
+      transform: translateX(50%);
+    }
+
+    /* Kissing Animation */
+    .couple:hover .girl {
+      transform: translateX(40px) scale(1.1);
+    }
+
+    .couple:hover .boy {
+      transform: translateX(-40px) scale(1.1);
+    }
+
+    /* Magical Heart */
+    .kiss {
+      position: absolute;
+      top: 120px;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 30px;
+      color: #ff69b4;
+      opacity: 0;
+      animation: kissEffect 2s infinite ease-in-out;
+    }
+
+    @keyframes kissEffect {
+      0%, 100% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.5);
+      }
+      50% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1.5);
+      }
+    }
+
+    /* Floating Hearts */
     .hearts {
       position: absolute;
       top: 50%;
@@ -51,54 +119,28 @@
       transform: translate(-50%, -50%);
       pointer-events: none;
     }
+
     .heart {
       position: absolute;
       width: 20px;
       height: 20px;
       background: pink;
       clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 50% 75%, 18% 100%, 0% 38%);
-      animation: floatHeart 3s infinite ease-in-out;
+      animation: floatHeart 4s infinite ease-in-out;
     }
+
     .heart:nth-child(2) {
       animation-delay: 0.5s;
       background: #ff69b4;
       transform: scale(1.2);
     }
+
     .heart:nth-child(3) {
       animation-delay: 1s;
       background: #f78fdf;
       transform: scale(0.8);
     }
 
-    /* Text Message */
-    .message {
-      position: absolute;
-      top: 70%;
-      font-size: 28px;
-      color: white;
-      text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.8);
-      animation: fadeIn 3s infinite alternate;
-    }
-
-    /* Credits */
-    .credits {
-      position: absolute;
-      bottom: 20px;
-      font-size: 14px;
-      color: rgba(255, 255, 255, 0.8);
-      text-align: center;
-      width: 100%;
-    }
-
-    /* Keyframes */
-    @keyframes float {
-      0%, 100% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-20px);
-      }
-    }
     @keyframes floatHeart {
       0% {
         opacity: 0;
@@ -106,13 +148,24 @@
       }
       50% {
         opacity: 1;
-        transform: translateY(-100px) scale(1);
+        transform: translateY(-150px) scale(1);
       }
       100% {
         opacity: 0;
-        transform: translateY(-200px) scale(1.2);
+        transform: translateY(-300px) scale(1.2);
       }
     }
+
+    /* Message */
+    .message {
+      position: absolute;
+      bottom: 20%;
+      font-size: 20px;
+      color: white;
+      text-align: center;
+      animation: fadeIn 3s infinite alternate;
+    }
+
     @keyframes fadeIn {
       0% {
         opacity: 0.5;
@@ -121,13 +174,53 @@
         opacity: 1;
       }
     }
+
+    /* Credits */
+    .credits {
+      position: absolute;
+      bottom: 5%;
+      font-size: 14px;
+      color: rgba(255, 255, 255, 0.8);
+      text-align: center;
+    }
+
+    /* Sparkles */
+    .sparkle {
+      position: absolute;
+      width: 8px;
+      height: 8px;
+      background: white;
+      border-radius: 50%;
+      box-shadow: 0 0 10px white;
+      animation: sparkleAnimation 3s infinite ease-in-out;
+    }
+
+    @keyframes sparkleAnimation {
+      0% {
+        opacity: 0;
+        transform: scale(0.5) translateY(0);
+      }
+      50% {
+        opacity: 1;
+        transform: scale(1) translateY(-100px);
+      }
+      100% {
+        opacity: 0;
+        transform: scale(0.5) translateY(-200px);
+      }
+    }
   </style>
 </head>
 <body>
   <div class="scene">
     <div class="couple">
-      <div class="girl"></div>
-      <div class="boy"></div>
+      <div class="girl">
+        <div class="head"></div>
+      </div>
+      <div class="boy">
+        <div class="head"></div>
+      </div>
+      <div class="kiss">💋</div>
     </div>
     <div class="hearts">
       <div class="heart"></div>
@@ -137,20 +230,5 @@
     <div class="message">I miss you, babe! 💕</div>
     <div class="credits">Made with 💕 by Ajinkya Jadhav</div>
   </div>
-
-  <script>
-    // JavaScript for Additional Effects
-    const hearts = document.querySelector('.hearts');
-
-    // Generate more hearts dynamically
-    for (let i = 0; i < 20; i++) {
-      const heart = document.createElement('div');
-      heart.classList.add('heart');
-      heart.style.left = `${Math.random() * 100}%`;
-      heart.style.animationDelay = `${Math.random() * 5}s`;
-      heart.style.transform = `scale(${Math.random() * 1.5})`;
-      hearts.appendChild(heart);
-    }
-  </script>
 </body>
 </html>
